- Bumped Java version to 16